--- a/week2.ipynb
+++ b/week2.ipynb
@@ -13,8 +13,8 @@
     "====================\n",
     "*Create a small Jupyter (IPython) Notebook about one aspect of data structures that you might find somewhat challenging*\n",
     "---------------------\n",
-    "*Such as set comprehensions, or using the zip() function*</br>\n",
-    "*Includes both **code** and **documentation** utilizing Markdown.</br>\n",
+    "*Such as set comprehensions, or using the zip() function*\n",
+    "*Includes both **code** and **documentation** utilizing Markdown.\n",
     "This Jupyter Notebook is hosted on GitHub:* [GithubLink](https://github.com/dailyfatcat/IS362_Assignment2)"
    ]
   },
@@ -94,9 +94,9 @@
    "source": [
     "Documentation\n",
     "---------\n",
-    "*The following websites were used to further my understanding of Lists, and List comprehensions.</br>\n",
-    "Last semester this topic seemed confusing, and these websites helped me to better understand the topic.*</br>\n",
-    "[Docs.Python.org](https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions)</br>\n",
+    "*The following websites were used to further my understanding of Lists, and List comprehensions.\n",
+    "Last semester this topic seemed confusing, and these websites helped me to better understand the topic.*\n",
+    "[Docs.Python.org](https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions)\n",
     "[List Comprehensions Further Research](https://pythonforbeginners.com/basics/list-comprehensions-in-python)"
    ],
    "metadata": {
